<resources>
    <string name="app_label">reddit</string>
    <string name="app_name">reddit</string>
    <string name="user_agent">reddit (Android) %s</string>
    <string name="menu_search">[beta] Search</string>
    <string name="search_title_prefix">[beta] Search: </string>
    <string name="search_hint">[beta] Search reddit</string>
    <string name="search_sort_label">Sort results by </string>
 	<string-array name="search_results_sorting">
        <item>relevant</item>
        <item>new</item>
        <item>top</item>
    </string-array>
    <string name="search_tips_text">reddit:\'{name}\' find things posted in {name} only
        							author:\'{username}\' return things submitted by {username} only
									site:\'{domain}\' get links to pages on {domain} only
									url:\'{text}\' search for {text} in url
									selftext:\'{text}\' search for {text} in self post contents
									is_self:{1|0} include (1) or exclude (0) self posts over18:{1|0} include (1) or exclude (0) results tagged NSFW</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="quit">Quit</string>
    <string name="really_quit">Really quit?</string>
    <string name="confirm_logout_title">Logout</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="noThreads">No threads here</string>
    <string name="noComments">No comments here</string>
    <string name="noMessages">Your inbox is empty.</string>
    <string name="noSubreddits">No subreddits</string>
    <string name="loading_splash_text">Loading…</string>
    <string name="subscriber_count_format" formatted="false">%s subs.</string>
    <string name="second_age_format" formatted="false">%d second</string>
    <string name="minute_age_format" formatted="false">%d minute</string>
    <string name="hour_age_format" formatted="false">%d hour</string>
    <string name="day_age_format" formatted="false">%d day</string>
    <string name="month_age_format" formatted="false">%d month</string>
    <string name="year_age_format" formatted="false">%d year</string>
    <string name="pick_subreddit_label">Subreddit name:</string>
    <string name="pick_subreddit_button">Go</string>
    <string name="frontpage">reddit front page</string>
    <string name="subreddit_layout_srtext_text">Android</string>
    <string name="subreddit_layout_download_text">Download</string>
	<string name="login_username_label">Username:</string>
	<string name="login_password_label">Password:</string>
	<string name="login_button">Login</string>
	<string name="login_remember_checkbox">Remember me?</string>
	<string name="vote_up_button">Upvote</string>
	<string name="vote_down_button">Downvote</string>
	<string name="thread_link_button">link</string>
	<string name="thread_comments_button">comments</string>
	<string name="thread_time_submitter">%1$s by</string>
	<string name="comment_links_button">links</string>
	<string name="comment_reply_button">reply</string>
	<string name="comment_save_button">save</string>
	<string name="reply_save_button">save</string>
	<string name="reply_cancel_button">cancel</string>
	<string name="compose_destination_text">to:</string>
	<string name="compose_subject_text">subject:</string>
	<string name="compose_message_text">message:</string>
	<string name="compose_send_button">send</string>
	<string name="compose_cancel_button">cancel</string>
	<string name="compose_captcha_text">are you human? (sorry)</string>
	<string name="compose_captcha_loading">loading CAPTCHA…</string>
	<string name="comment_hidden">[+]</string>
	<string name="more_comments">load more comments</string>
	<string name="context_warning">You are viewing a single comment\'s thread.</string>
	<string name="click_to_view_all">Click here to view the rest of the comments.</string>
	<string name="locked_thread_warning">This post is locked.</string>
	<string name="unable_to_comment">You won\'t be able to comment.</string>
	<string name="archived_thread_warning">This is an archived post.</string>
	<string name="unable_to_vote_or_comment">You won\'t be able to vote or comment.</string>
	<string name="next_threads">next</string>
	<string name="previous_threads">prev</string>
	<string name="load_in_progress_toast">Please wait, still loading.</string>
	<string name="error_voting_toast">Error voting. Please try again.</string>
	<string name="mail_notification_unscheduled">Reddit mail notification service disabled.</string>
	<string name="mail_notification_scheduled_5min">Reddit mail set to check every 5 minutes.</string>
	<string name="mail_notification_scheduled_30min">Reddit mail set to check every 30 minutes.</string>
	<string name="mail_notification_scheduled_1hour">Reddit mail set to check every 1 hour.</string>
	<string name="mail_notification_scheduled_6hours">Reddit mail set to check every 6 hours.</string>
	<string name="mail_notification_scheduled_1day">Reddit mail set to check every 24 hours.</string>
	<string name="submit_title_label">title</string>
	<string name="submit_url_label">url</string>
	<string name="submit_text_label">text (optional)</string>
	<string name="submit_reddit_label">reddit</string>
	<string name="submit_captcha_label">are you human? (sorry)</string>
	<string name="submit_captcha_loading">loading CAPTCHA…</string>
	<string name="submit_button">submit</string>
	<string name="select_link_title">Select action</string>
	<string name="inbox_title">%s\'s inbox</string>
	<string name="compose_message">Compose message</string>
	<string name="view_saved_posts">View saved posts</string>
	<string name="dark_theme">Use dark theme</string>
	<string name="subscribe">+ Frontpage</string>
	<string name="unsubscribe">- Frontpage</string>
	<string name="inbox">Inbox</string>
	<string name="light_theme">Use light theme</string>
	<string name="login">Login</string>
	<string name="logout">Logout: %s</string>
	<string name="menu_preferences">Settings</string>
	<string name="find_brief">Find</string>
	<string name="find">Find comment</string>
	<string name="find_box_hint">comment text</string>
	<string name="find_should_wrap">Wrap search</string>
	<string name="find_not_found">\"%s\" not found</string>
	<string name="find_new">Find new</string>
	<string name="find_new_brief">New</string>
	<string name="find_next">Find next</string>
	<string name="find_next_brief">Next</string>
	<string name="op">OP</string>
	<string name="op_edit">Edit OP</string>
	<string name="op_delete">Delete thread</string>
	<string name="open_browser">Open in browser</string>
	<string name="pick_subreddit">Pick subreddit</string>
	<string name="refresh">Refresh</string>
	<string name="random_subreddit">Random subreddit</string>
	<string name="share">Share</string>
	<string name="sort_by_best">Sort by: best</string>
	<string name="sort_by_hot">Sort by: hot</string>
	<string name="sort_by_new">Sort by: new</string>
	<string name="sort_by_controversial">Sort by: controversial</string>
	<string name="sort_by_top">Sort by: top</string>
	<string name="sort_by_old">Sort by: old</string>
	<string name="submit_link">Submit link</string>
	<string name="update_captcha">Update CAPTCHA</string>
	<string name="user_profile">%s\'s profile</string>
	<string name="view_comments">View comments</string>
	<string name="view_subreddit">View subreddit</string>
	<string name="close_browser">Close browser</string>
	<string name="saved_content">Saved Comments</string>
	<string name="author">Author</string>
	<string name="body">Body</string>
	<string name="save_comment">save</string>
	<string name="unsave_comment">unsave</string>
	<string name="view_saved_comment">view</string>
	<string name="focus_parent_comment">Focus parent</string>
	<string name="show_comment">Show comment</string>
	<string name="hide_comment">Hide comment</string>
	<string name="view_full_context">View the full context</string>
	<string name="view_context">View context</string>
	<string name="goto_thread">Go to full comments</string>
	<string name="links_menu_item">Links</string>
	<string name="share_comments">Share Comments</string>
	<string name="pref_general_category">General settings</string>
	<string name="pref_appearance_category">Appearance</string>
	<string name="pref_mail_category">Reddit mail</string>
    <string name="pref_browser">Browser settings</string>
    <string name="pref_useragent">User-Agent string</string>
    <string name="pref_useragent_string">Mozilla/5.0 AppleWebkit/534.30 (KHTML, like Gecko) Version/4.0 Mobile</string>
    <string name="pref_overwrite_useragent">Overwrite User-Agent</string>
    <string name="pref_load_javascript">Load Javascript</string>
    <string name="pref_load_plugins">Load Plugins</string>
    <string name="pref_imgur_direct">Open Imgur Images Directly</string>
	<string name="pref_vreddit_direct">Load v.redd.it links directly</string>
	<string name="pref_vreddit_direct_hint">Audio will not work</string>
	<string name="pref_homepage">Default starting reddit</string>
	<string name="pref_homepage_hint">Leave blank to use default</string>
	<string name="pref_use_external_browser">Use external browser</string>
	<string name="pref_confirm_quit">Quit/logout confirmation</string>
	<string name="pref_save_history">Save browsing history</string>
	<string name="pref_theme">Theme</string>
	<string name="pref_theme_dialogtitle">Theme</string>
	<string-array name="pref_theme_choices">
		<item>Dark</item>
		<item>Light</item>
    </string-array>
	<string-array name="pref_theme_values" translatable="false">
		<item>THEME_DARK</item>
		<item>THEME_LIGHT</item>
    </string-array>
    <string name="pref_text_size">Text size</string>
    <string name="pref_text_size_dialogtitle">Text size</string>
    <string-array name="pref_text_size_choices">
    	<item>Medium</item>
    	<item>Large</item>
    	<item>Larger</item>
    	<item>Huge</item>
   	</string-array>
	<string-array name="pref_text_size_values" translatable="false">
        <item>TEXT_SIZE_MEDIUM</item>
        <item>TEXT_SIZE_LARGE</item>
        <item>TEXT_SIZE_LARGER</item>
        <item>TEXT_SIZE_HUGE</item>
    </string-array>
    <string name="pref_show_comment_guide_lines">Comment guide lines</string>
    <string name="pref_always_show_next_previous">Always show navbar</string>
	<string name="pref_rotation">Screen rotation</string>
	<string name="pref_rotation_dialogtitle">Screen rotation</string>
	<string-array name="pref_rotation_choices">
        <item>System settings (default)</item>
        <item>Portrait</item>
        <item>Landscape</item>
    </string-array>
	<string-array name="pref_rotation_values" translatable="false">
        <item>ROTATION_UNSPECIFIED</item>
        <item>ROTATION_PORTRAIT</item>
        <item>ROTATION_LANDSCAPE</item>
    </string-array>
	<string name="pref_mail_notification_style">Mail notification style</string>
	<string name="pref_mail_notification_style_dialogtitle">Mail notification style</string>
	<string-array name="pref_mail_notification_style_choices">
		<item>Standard</item>
		<item>Big envelope</item>
		<item>Off</item>
	</string-array>
    <string-array name="pref_mail_notification_style_values" translatable="false">
        <item>MAIL_NOTIFICATION_STYLE_DEFAULT</item>
        <item>MAIL_NOTIFICATION_STYLE_BIG_ENVELOPE</item>
        <item>MAIL_NOTIFICATION_STYLE_OFF</item>
    </string-array>
    <string name="pref_mail_notification_service">Check mail outside app</string>
    <string name="pref_mail_notification_service_dialogtitle">Check mail outside app</string>
    <string-array name="pref_mail_notification_service_choices">
    	<item>Off</item>
    	<item>Every 5 minutes</item>
    	<item>Every 30 minutes</item>
    	<item>Every 1 hour</item>
    	<item>Every 6 hours</item>
    	<item>Every 24 hours</item>
   	</string-array>
    <string name="copy">Copy Url</string>
</resources>