<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/MAIN_MENU">
        <item android:id="@+id/open_browser_menu_id"
            android:title="@string/open_browser"
            android:icon="@drawable/ic_menu_browser"
            />
        <item android:id="@+id/close_browser_menu_id"
            android:title="@string/close_browser"
            android:icon="@drawable/ic_menu_close_clear_cancel"
            />
        <item android:id="@+id/copy_url_menu_id"
            android:title="@string/copy"
            />
        <item android:id="@+id/view_comments_menu_id"
            android:title="@string/view_comments"
            android:icon="@drawable/ic_menu_start_conversation"
            />
    </group>
</menu>
 
