<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@id/submitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="20dp"
        android:text="@string/author"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@id/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/body"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="30dp" >

        <Button
            android:id="@+id/view_saved_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/view_saved_comment" />

        <Button
            android:id="@+id/unsave_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unsave_comment" />

        <Button
            android:id="@id/thread_link_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:text="@string/comment_links_button" />

    </LinearLayout>

</LinearLayout>